[gd_scene load_steps=5 format=1]

[ext_resource path="res://Email.gd" type="Script" id=1]
[ext_resource path="res://email.png" type="Texture" id=2]

[sub_resource type="StyleBoxFlat" id=1]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.6, 0.6, 0.6, 1 )
light_color = Color( 0.8, 0.8, 0.8, 1 )
dark_color = Color( 0.8, 0.8, 0.8, 1 )
border_size = 0
border_blend = true
draw_bg = true

[sub_resource type="StyleBoxEmpty" id=2]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[node name="Email" type="Container"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1030.0
margin/bottom = 77.0
script/script = ExtResource( 1 )

[node name="EmailSprite" type="Sprite" parent="."]

transform/pos = Vector2( 515.873, 38.6422 )
transform/scale = Vector2( 1.93211, 1.93211 )
texture = ExtResource( 2 )

[node name="HeadlineText" type="RichTextLabel" parent="EmailSprite"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -179.0
margin/top = -6.0
margin/right = 266.0
margin/bottom = 10.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode/enabled = true
bbcode/bbcode = ""
visible_characters = 63

[node name="BurndownTimer" type="Timer" parent="EmailSprite"]

process_mode = 1
wait_time = 15.0
one_shot = true
autostart = true

[node name="BurndownProgressBar" type="ProgressBar" parent="EmailSprite"]

visibility/opacity = 0.25
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -267.0
margin/top = -20.0
margin/right = 267.0
margin/bottom = 16.0
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
range/min = 0.0
range/max = 1.0
range/step = 1.0
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = false
percent/visible = false


